fix: post-process imported AI MCQs (Phase 1)