@@ -2,10 +2,9 @@ package com.odde.doughnut.services.ai;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.equalTo;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
-import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -13,30 +12,26 @@ import com.odde.doughnut.entities.Note;
 import com.odde.doughnut.services.GlobalSettingsService;
 import com.odde.doughnut.services.NoteQuestionGenerationService;
 import com.odde.doughnut.services.openAiApis.OpenAiApiHandler;
-import com.odde.doughnut.testability.TestabilitySettings;
-import com.odde.doughnut.utils.Randomizer;
-import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.Test;
 
 class AiQuestionGeneratorShuffleTest {
 
   @Test
-  void shouldShuffleChoicesInSpecificOrder() throws JsonProcessingException {
-    Randomizer mockedRandomizer = mock(Randomizer.class);
+  void shouldReturnPostProcessedGeneratedQuestion() throws JsonProcessingException {
     NoteQuestionGenerationService noteQuestionGenerationService =
         mock(NoteQuestionGenerationService.class);
     GlobalSettingsService globalSettingsService = mock(GlobalSettingsService.class);
     OpenAiApiHandler openAiApiHandler = mock(OpenAiApiHandler.class);
-    TestabilitySettings testabilitySettings = mock(TestabilitySettings.class);
+    GeneratedQuestionPostProcessor generatedQuestionPostProcessor =
+        mock(GeneratedQuestionPostProcessor.class);
 
     AiQuestionGenerator generator =
         new AiQuestionGenerator(
             noteQuestionGenerationService,
             globalSettingsService,
-            mockedRandomizer,
             openAiApiHandler,
-            testabilitySettings);
+            generatedQuestionPostProcessor);
 
     Note note = mock(Note.class);
     MCQWithAnswer originalQuestion =
@@ -46,15 +41,22 @@ class AiQuestionGeneratorShuffleTest {
             true,
             null,
             null);
-
-    List<String> shuffledChoices = Arrays.asList("6", "4", "5", "3");
-    doReturn(shuffledChoices).when(mockedRandomizer).shuffle(any());
+    MCQWithAnswer postProcessedQuestion =
+        new MCQWithAnswer(
+            new MultipleChoicesQuestion("What is 2+2?", List.of("6", "4", "5", "3")),
+            1,
+            true,
+            null,
+            null);
     when(noteQuestionGenerationService.generateQuestion(eq(note), eq(null), eq(null), eq(null)))
         .thenReturn(originalQuestion);
+    when(generatedQuestionPostProcessor.postProcess(originalQuestion))
+        .thenReturn(postProcessedQuestion);
 
     MCQWithAnswer result = generator.getAiGeneratedQuestion(note, null);
 
-    assertThat(result.getQuestion().getResponseChoices(), equalTo(shuffledChoices));
+    verify(generatedQuestionPostProcessor).postProcess(originalQuestion);
+    assertThat(result, equalTo(postProcessedQuestion));
     assertThat(result.getSolutionChoiceIndex(), equalTo(1));
   }
 }
